plc86/debug/Grammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.0.2 from Grammar.y
-----------------------------------------------------------------------------

state 104 contains 1 shift/reduce conflicts.
state 110 contains 1 reduce/reduce conflicts.
state 124 contains 1 reduce/reduce conflicts.
state 125 contains 1 reduce/reduce conflicts.
state 126 contains 2 shift/reduce conflicts.
state 141 contains 1 shift/reduce conflicts.

terminal FROMTABLES is unused
terminal TABLE is unused
terminal alphaLower is unused
terminal alphaUpper is unused
terminal digits is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parseCalc -> Start                          (0)
	Start -> '{' Inputs '}' Queries Output             (1)
	Inputs -> Input ',' Inputs                         (2)
	Inputs -> Input                                    (3)
	Input -> INPUT FILE Filename AS TableAssignment    (4)
	TableAssignment -> TableName NOLABELS              (5)
	TableAssignment -> TableName WITHLABELS ColumnLabels   (6)
	TableName -> alphaNumericString                    (7)
	ColumnLabels -> '[' ColumnLabels2 ']'              (8)
	ColumnLabels2 -> alphaNumericString ',' ColumnLabels2   (9)
	ColumnLabels2 -> alphaNumericString                (10)
	ColumnReference -> TableName '.' alphaNumericString   (11)
	ColumnReference -> TableName '.' int               (12)
	Output -> OUTPUT TableName TO OutputType           (13)
	OutputType -> STANDARD                             (14)
	OutputType -> FILE Filename                        (15)
	Position -> int ',' int                            (16)
	Axis -> COLUMN int                                 (17)
	Axis -> COLUMN alphaNumericString                  (18)
	Axis -> ROW int                                    (19)
	Queries -> LET TableAssignment BE Query '-' Queries   (20)
	Queries -> QUERIESEND                              (21)
	TableExpression -> TableName                       (22)
	TableExpression -> LET TableAssignment BE Query    (23)
	TableExpression -> LET TableAssignment BE JoinClause   (24)
	TableExpression -> '(' TableExpression ')'         (25)
	Query -> MERGE TableName TableName WITHCONSTRAINT BooleanExpression   (26)
	Query -> Selection                                 (27)
	Query -> PRODUCT TableName TableName               (28)
	Query -> SORT TableName SortClause                 (29)
	Query -> INSERT var TableName Position             (30)
	Query -> FILL var TableName Axis                   (31)
	Query -> DELETE TableName Axis                     (32)
	Query -> CLEAR TableName Position                  (33)
	Query -> ADDBLANKTO TableName Axis                 (34)
	Selection -> SELECT MaxClause Distinct ColumnChoice FROM TableExpression WhereClause PlusClause   (35)
	SortClause -> ASC                                  (36)
	SortClause -> DESC                                 (37)
	MaxClause -> MAX Number                            (38)
	MaxClause ->                                       (39)
	Distinct -> DISTINCT                               (40)
	Distinct ->                                        (41)
	ColumnChoice -> COLUMNS '*'                        (42)
	ColumnChoice -> COLUMN ColumnReference             (43)
	ColumnChoice -> COLUMN ColumnReference ',' ColumnChoice   (44)
	WhereClause -> WHERE BooleanExpression             (45)
	WhereClause ->                                     (46)
	PlusClause -> PLUS Selection                       (47)
	PlusClause ->                                      (48)
	JoinClause -> TableExpression JoinOperator TableExpression WITHCONSTRAINT BooleanExpression   (49)
	JoinOperator -> INNER JOIN                         (50)
	JoinOperator -> LEFT JOIN                          (51)
	JoinOperator -> RIGHT JOIN                         (52)
	JoinOperator -> FULL JOIN                          (53)
	JoinOperator -> OUTER JOIN                         (54)
	BooleanExpression -> '(' BooleanExpression ')'     (55)
	BooleanExpression -> BooleanExpression AND BooleanExpression   (56)
	BooleanExpression -> BooleanExpression OR BooleanExpression   (57)
	BooleanExpression -> NOT BooleanExpression         (58)
	BooleanExpression -> SubExpression '=' SubExpression   (59)
	SubExpression -> BooleanExpression                 (60)
	SubExpression -> ColumnReference                   (61)
	SubExpression -> var                               (62)
	SubExpression -> IndexExpression                   (63)
	IndexExpression -> INDEX                           (64)
	IndexExpression -> Number                          (65)
	IndexExpression -> '(' IndexExpression ')'         (66)
	IndexExpression -> IndexExpression '+' IndexExpression   (67)
	IndexExpression -> IndexExpression '-' IndexExpression   (68)
	IndexExpression -> IndexExpression '*' IndexExpression   (69)
	IndexExpression -> IndexExpression '/' IndexExpression   (70)
	IndexExpression -> IndexExpression "//" IndexExpression   (71)
	IndexExpression -> IndexExpression '%' IndexExpression   (72)
	IndexExpression -> IndexExpression '^' IndexExpression   (73)
	Number -> positiveNum                              (74)
	Number -> negativeNum                              (75)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	INPUT          { PT _ TokenINPUT }
	OUTPUT         { PT _ TokenOUTPUT }
	LET            { PT _ TokenLET }
	BE             { PT _ TokenBE }
	QUERIESEND     { PT _ TokenQueriesEnd }
	MERGE          { PT _ TokenMERGE }
	SELECT         { PT _ TokenSELECT }
	TO             { PT _ TokenTO }
	STANDARD       { PT _ TokenSTANDARD }
	FILE           { PT _ TokenFILE }
	PRODUCT        { PT _ TokenPRODUCT }
	SORT           { PT _ TokenSORT }
	INSERT         { PT _ TokenINSERT }
	FILL           { PT _ TokenFILL }
	DELETE         { PT _ TokenDELETE }
	CLEAR          { PT _ TokenCLEAR }
	COLUMN         { PT _ TokenCOLUMN }
	COLUMNS        { PT _ TokenCOLUMNS }
	ROW            { PT _ TokenROW }
	FROMTABLES     { PT _ TokenFROMTABLES }
	FROM           { PT _ TokenFROM }
	JOIN           { PT _ TokenJOIN }
	INNER          { PT _ TokenINNER }
	LEFT           { PT _ TokenLEFT }
	RIGHT          { PT _ TokenRIGHT }
	FULL           { PT _ TokenFULL }
	OUTER          { PT _ TokenOUTER }
	TABLE          { PT _ TokenTABLE }
	AS             { PT _ TokenAS }
	WITHLABELS     { PT _ TokenWITHLABELS }
	NOLABELS       { PT _ TokenNOLABELS }
	WHERE          { PT _ TokenWHERE }
	WITHCONSTRAINT { PT _ TokenWITHCONSTRAINT }
	AND            { PT _ TokenAND }
	OR             { PT _ TokenOR }
	NOT            { PT _ TokenNOT }
	INDEX          { PT _ TokenINDEX }
	MAX            { PT _ TokenMAX }
	PLUS           { PT _ TokenPLUSWORD }
	DISTINCT       { PT _ TokenDISTINCT }
	ASC            { PT _ TokenASC }
	DESC           { PT _ TokenDESC }
	ADDBLANKTO     { PT _ TokenADDBLANKTO }
	'='            { PT _ TokenEQUAL }
	'+'            { PT _ TokenPLUS }
	'*'            { PT _ TokenMULTIPLY }
	'/'            { PT _ TokenDIVSINGLE }
	"//"           { PT _ TokenDIVTWO }
	'%'            { PT _ TokenPERCENT }
	'^'            { PT _ TokenEXP }
	'{'            { PT _ TokenSquigleBracketL }
	'}'            { PT _ TokenSquigleBracketR }
	'-'            { PT _ TokenDash }
	','            { PT _ TokenComma }
	'['            { PT _ TokenSquareBracketL }
	']'            { PT _ TokenSquareBracketR }
	'.'            { PT _ TokenDot }
	'('            { PT _ TokenBracketL }
	')'            { PT _ TokenBracketR }
	int            { PT _ (TokenInt $$) }
	alphaLower     { PT _ (TokenAlphaLower $$) }
	alphaUpper     { PT _ (TokenAlphaUpper $$) }
	digits         { PT _ (TokenDigits $$) }
	Filename       { PT _ (TokenFilename $$) }
	alphaNumericString{ PT _ (TokenAlphaNumericString $$) }
	positiveNum    { PT _ (TokenPositiveNumber $$) }
	negativeNum    { PT _ (TokenNegativeNumber $$) }
	var            { PT _ (TokenString $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parseCalc rule  0
	Start           rule  1
	Inputs          rules 2, 3
	Input           rule  4
	TableAssignment rules 5, 6
	TableName       rule  7
	ColumnLabels    rule  8
	ColumnLabels2   rules 9, 10
	ColumnReference rules 11, 12
	Output          rule  13
	OutputType      rules 14, 15
	Position        rule  16
	Axis            rules 17, 18, 19
	Queries         rules 20, 21
	TableExpression rules 22, 23, 24, 25
	Query           rules 26, 27, 28, 29, 30, 31, 32, 33, 34
	Selection       rule  35
	SortClause      rules 36, 37
	MaxClause       rules 38, 39
	Distinct        rules 40, 41
	ColumnChoice    rules 42, 43, 44
	WhereClause     rules 45, 46
	PlusClause      rules 47, 48
	JoinClause      rule  49
	JoinOperator    rules 50, 51, 52, 53, 54
	BooleanExpression rules 55, 56, 57, 58, 59
	SubExpression   rules 60, 61, 62, 63
	IndexExpression rules 64, 65, 66, 67, 68, 69, 70, 71, 72, 73
	Number          rules 74, 75

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parseCalc -> . Start                         (rule 0)

	'{'            shift, and enter state 2

	Start          goto state 3

State 1

	Start -> . '{' Inputs '}' Queries Output            (rule 1)

	'{'            shift, and enter state 2


State 2

	Start -> '{' . Inputs '}' Queries Output            (rule 1)

	INPUT          shift, and enter state 6

	Inputs         goto state 4
	Input          goto state 5

State 3

	%start_parseCalc -> Start .                         (rule 0)

	%eof           accept


State 4

	Start -> '{' Inputs . '}' Queries Output            (rule 1)

	'}'            shift, and enter state 9


State 5

	Inputs -> Input . ',' Inputs                        (rule 2)
	Inputs -> Input .                                   (rule 3)

	'}'            reduce using rule 3
	','            shift, and enter state 8


State 6

	Input -> INPUT . FILE Filename AS TableAssignment    (rule 4)

	FILE           shift, and enter state 7


State 7

	Input -> INPUT FILE . Filename AS TableAssignment    (rule 4)

	Filename       shift, and enter state 14


State 8

	Inputs -> Input ',' . Inputs                        (rule 2)

	INPUT          shift, and enter state 6

	Inputs         goto state 13
	Input          goto state 5

State 9

	Start -> '{' Inputs '}' . Queries Output            (rule 1)

	LET            shift, and enter state 11
	QUERIESEND     shift, and enter state 12

	Queries        goto state 10

State 10

	Start -> '{' Inputs '}' Queries . Output            (rule 1)

	OUTPUT         shift, and enter state 20

	Output         goto state 19

State 11

	Queries -> LET . TableAssignment BE Query '-' Queries    (rule 20)

	alphaNumericStringshift, and enter state 18

	TableAssignmentgoto state 16
	TableName      goto state 17

State 12

	Queries -> QUERIESEND .                             (rule 21)

	OUTPUT         reduce using rule 21


State 13

	Inputs -> Input ',' Inputs .                        (rule 2)

	'}'            reduce using rule 2


State 14

	Input -> INPUT FILE Filename . AS TableAssignment    (rule 4)

	AS             shift, and enter state 15


State 15

	Input -> INPUT FILE Filename AS . TableAssignment    (rule 4)

	alphaNumericStringshift, and enter state 18

	TableAssignmentgoto state 25
	TableName      goto state 17

State 16

	Queries -> LET TableAssignment . BE Query '-' Queries    (rule 20)

	BE             shift, and enter state 24


State 17

	TableAssignment -> TableName . NOLABELS             (rule 5)
	TableAssignment -> TableName . WITHLABELS ColumnLabels    (rule 6)

	WITHLABELS     shift, and enter state 22
	NOLABELS       shift, and enter state 23


State 18

	TableName -> alphaNumericString .                   (rule 7)

	TO             reduce using rule 7
	COLUMN         reduce using rule 7
	ROW            reduce using rule 7
	INNER          reduce using rule 7
	LEFT           reduce using rule 7
	RIGHT          reduce using rule 7
	FULL           reduce using rule 7
	OUTER          reduce using rule 7
	WITHLABELS     reduce using rule 7
	NOLABELS       reduce using rule 7
	WHERE          reduce using rule 7
	WITHCONSTRAINT reduce using rule 7
	PLUS           reduce using rule 7
	ASC            reduce using rule 7
	DESC           reduce using rule 7
	'-'            reduce using rule 7
	'.'            reduce using rule 7
	')'            reduce using rule 7
	int            reduce using rule 7
	alphaNumericStringreduce using rule 7


State 19

	Start -> '{' Inputs '}' Queries Output .            (rule 1)

	%eof           reduce using rule 1


State 20

	Output -> OUTPUT . TableName TO OutputType          (rule 13)

	alphaNumericStringshift, and enter state 18

	TableName      goto state 21

State 21

	Output -> OUTPUT TableName . TO OutputType          (rule 13)

	TO             shift, and enter state 39


State 22

	TableAssignment -> TableName WITHLABELS . ColumnLabels    (rule 6)

	'['            shift, and enter state 38

	ColumnLabels   goto state 37

State 23

	TableAssignment -> TableName NOLABELS .             (rule 5)

	BE             reduce using rule 5
	'}'            reduce using rule 5
	','            reduce using rule 5


State 24

	Queries -> LET TableAssignment BE . Query '-' Queries    (rule 20)

	MERGE          shift, and enter state 28
	SELECT         shift, and enter state 29
	PRODUCT        shift, and enter state 30
	SORT           shift, and enter state 31
	INSERT         shift, and enter state 32
	FILL           shift, and enter state 33
	DELETE         shift, and enter state 34
	CLEAR          shift, and enter state 35
	ADDBLANKTO     shift, and enter state 36

	Query          goto state 26
	Selection      goto state 27

State 25

	Input -> INPUT FILE Filename AS TableAssignment .    (rule 4)

	'}'            reduce using rule 4
	','            reduce using rule 4


State 26

	Queries -> LET TableAssignment BE Query . '-' Queries    (rule 20)

	'-'            shift, and enter state 55


State 27

	Query -> Selection .                                (rule 27)

	INNER          reduce using rule 27
	LEFT           reduce using rule 27
	RIGHT          reduce using rule 27
	FULL           reduce using rule 27
	OUTER          reduce using rule 27
	WHERE          reduce using rule 27
	WITHCONSTRAINT reduce using rule 27
	PLUS           reduce using rule 27
	'-'            reduce using rule 27
	')'            reduce using rule 27


State 28

	Query -> MERGE . TableName TableName WITHCONSTRAINT BooleanExpression    (rule 26)

	alphaNumericStringshift, and enter state 18

	TableName      goto state 54

State 29

	Selection -> SELECT . MaxClause Distinct ColumnChoice FROM TableExpression WhereClause PlusClause    (rule 35)

	COLUMN         reduce using rule 39
	COLUMNS        reduce using rule 39
	MAX            shift, and enter state 53
	DISTINCT       reduce using rule 39

	MaxClause      goto state 52

State 30

	Query -> PRODUCT . TableName TableName              (rule 28)

	alphaNumericStringshift, and enter state 18

	TableName      goto state 51

State 31

	Query -> SORT . TableName SortClause                (rule 29)

	alphaNumericStringshift, and enter state 18

	TableName      goto state 50

State 32

	Query -> INSERT . var TableName Position            (rule 30)

	var            shift, and enter state 49


State 33

	Query -> FILL . var TableName Axis                  (rule 31)

	var            shift, and enter state 48


State 34

	Query -> DELETE . TableName Axis                    (rule 32)

	alphaNumericStringshift, and enter state 18

	TableName      goto state 47

State 35

	Query -> CLEAR . TableName Position                 (rule 33)

	alphaNumericStringshift, and enter state 18

	TableName      goto state 46

State 36

	Query -> ADDBLANKTO . TableName Axis                (rule 34)

	alphaNumericStringshift, and enter state 18

	TableName      goto state 45

State 37

	TableAssignment -> TableName WITHLABELS ColumnLabels .    (rule 6)

	BE             reduce using rule 6
	'}'            reduce using rule 6
	','            reduce using rule 6


State 38

	ColumnLabels -> '[' . ColumnLabels2 ']'             (rule 8)

	alphaNumericStringshift, and enter state 44

	ColumnLabels2  goto state 43

State 39

	Output -> OUTPUT TableName TO . OutputType          (rule 13)

	STANDARD       shift, and enter state 41
	FILE           shift, and enter state 42

	OutputType     goto state 40

State 40

	Output -> OUTPUT TableName TO OutputType .          (rule 13)

	%eof           reduce using rule 13


State 41

	OutputType -> STANDARD .                            (rule 14)

	%eof           reduce using rule 14


State 42

	OutputType -> FILE . Filename                       (rule 15)

	Filename       shift, and enter state 77


State 43

	ColumnLabels -> '[' ColumnLabels2 . ']'             (rule 8)

	']'            shift, and enter state 76


State 44

	ColumnLabels2 -> alphaNumericString . ',' ColumnLabels2    (rule 9)
	ColumnLabels2 -> alphaNumericString .               (rule 10)

	','            shift, and enter state 75
	']'            reduce using rule 10


State 45

	Query -> ADDBLANKTO TableName . Axis                (rule 34)

	COLUMN         shift, and enter state 70
	ROW            shift, and enter state 71

	Axis           goto state 74

State 46

	Query -> CLEAR TableName . Position                 (rule 33)

	int            shift, and enter state 73

	Position       goto state 72

State 47

	Query -> DELETE TableName . Axis                    (rule 32)

	COLUMN         shift, and enter state 70
	ROW            shift, and enter state 71

	Axis           goto state 69

State 48

	Query -> FILL var . TableName Axis                  (rule 31)

	alphaNumericStringshift, and enter state 18

	TableName      goto state 68

State 49

	Query -> INSERT var . TableName Position            (rule 30)

	alphaNumericStringshift, and enter state 18

	TableName      goto state 67

State 50

	Query -> SORT TableName . SortClause                (rule 29)

	ASC            shift, and enter state 65
	DESC           shift, and enter state 66

	SortClause     goto state 64

State 51

	Query -> PRODUCT TableName . TableName              (rule 28)

	alphaNumericStringshift, and enter state 18

	TableName      goto state 63

State 52

	Selection -> SELECT MaxClause . Distinct ColumnChoice FROM TableExpression WhereClause PlusClause    (rule 35)

	COLUMN         reduce using rule 41
	COLUMNS        reduce using rule 41
	DISTINCT       shift, and enter state 62

	Distinct       goto state 61

State 53

	MaxClause -> MAX . Number                           (rule 38)

	positiveNum    shift, and enter state 59
	negativeNum    shift, and enter state 60

	Number         goto state 58

State 54

	Query -> MERGE TableName . TableName WITHCONSTRAINT BooleanExpression    (rule 26)

	alphaNumericStringshift, and enter state 18

	TableName      goto state 57

State 55

	Queries -> LET TableAssignment BE Query '-' . Queries    (rule 20)

	LET            shift, and enter state 11
	QUERIESEND     shift, and enter state 12

	Queries        goto state 56

State 56

	Queries -> LET TableAssignment BE Query '-' Queries .    (rule 20)

	OUTPUT         reduce using rule 20


State 57

	Query -> MERGE TableName TableName . WITHCONSTRAINT BooleanExpression    (rule 26)

	WITHCONSTRAINT shift, and enter state 88


State 58

	MaxClause -> MAX Number .                           (rule 38)

	COLUMN         reduce using rule 38
	COLUMNS        reduce using rule 38
	DISTINCT       reduce using rule 38


State 59

	Number -> positiveNum .                             (rule 74)

	COLUMN         reduce using rule 74
	COLUMNS        reduce using rule 74
	INNER          reduce using rule 74
	LEFT           reduce using rule 74
	RIGHT          reduce using rule 74
	FULL           reduce using rule 74
	OUTER          reduce using rule 74
	WHERE          reduce using rule 74
	WITHCONSTRAINT reduce using rule 74
	AND            reduce using rule 74
	OR             reduce using rule 74
	PLUS           reduce using rule 74
	DISTINCT       reduce using rule 74
	'='            reduce using rule 74
	'+'            reduce using rule 74
	'*'            reduce using rule 74
	'/'            reduce using rule 74
	"//"           reduce using rule 74
	'%'            reduce using rule 74
	'^'            reduce using rule 74
	'-'            reduce using rule 74
	')'            reduce using rule 74


State 60

	Number -> negativeNum .                             (rule 75)

	COLUMN         reduce using rule 75
	COLUMNS        reduce using rule 75
	INNER          reduce using rule 75
	LEFT           reduce using rule 75
	RIGHT          reduce using rule 75
	FULL           reduce using rule 75
	OUTER          reduce using rule 75
	WHERE          reduce using rule 75
	WITHCONSTRAINT reduce using rule 75
	AND            reduce using rule 75
	OR             reduce using rule 75
	PLUS           reduce using rule 75
	DISTINCT       reduce using rule 75
	'='            reduce using rule 75
	'+'            reduce using rule 75
	'*'            reduce using rule 75
	'/'            reduce using rule 75
	"//"           reduce using rule 75
	'%'            reduce using rule 75
	'^'            reduce using rule 75
	'-'            reduce using rule 75
	')'            reduce using rule 75


State 61

	Selection -> SELECT MaxClause Distinct . ColumnChoice FROM TableExpression WhereClause PlusClause    (rule 35)

	COLUMN         shift, and enter state 86
	COLUMNS        shift, and enter state 87

	ColumnChoice   goto state 85

State 62

	Distinct -> DISTINCT .                              (rule 40)

	COLUMN         reduce using rule 40
	COLUMNS        reduce using rule 40


State 63

	Query -> PRODUCT TableName TableName .              (rule 28)

	INNER          reduce using rule 28
	LEFT           reduce using rule 28
	RIGHT          reduce using rule 28
	FULL           reduce using rule 28
	OUTER          reduce using rule 28
	WHERE          reduce using rule 28
	WITHCONSTRAINT reduce using rule 28
	PLUS           reduce using rule 28
	'-'            reduce using rule 28
	')'            reduce using rule 28


State 64

	Query -> SORT TableName SortClause .                (rule 29)

	INNER          reduce using rule 29
	LEFT           reduce using rule 29
	RIGHT          reduce using rule 29
	FULL           reduce using rule 29
	OUTER          reduce using rule 29
	WHERE          reduce using rule 29
	WITHCONSTRAINT reduce using rule 29
	PLUS           reduce using rule 29
	'-'            reduce using rule 29
	')'            reduce using rule 29


State 65

	SortClause -> ASC .                                 (rule 36)

	INNER          reduce using rule 36
	LEFT           reduce using rule 36
	RIGHT          reduce using rule 36
	FULL           reduce using rule 36
	OUTER          reduce using rule 36
	WHERE          reduce using rule 36
	WITHCONSTRAINT reduce using rule 36
	PLUS           reduce using rule 36
	'-'            reduce using rule 36
	')'            reduce using rule 36


State 66

	SortClause -> DESC .                                (rule 37)

	INNER          reduce using rule 37
	LEFT           reduce using rule 37
	RIGHT          reduce using rule 37
	FULL           reduce using rule 37
	OUTER          reduce using rule 37
	WHERE          reduce using rule 37
	WITHCONSTRAINT reduce using rule 37
	PLUS           reduce using rule 37
	'-'            reduce using rule 37
	')'            reduce using rule 37


State 67

	Query -> INSERT var TableName . Position            (rule 30)

	int            shift, and enter state 73

	Position       goto state 84

State 68

	Query -> FILL var TableName . Axis                  (rule 31)

	COLUMN         shift, and enter state 70
	ROW            shift, and enter state 71

	Axis           goto state 83

State 69

	Query -> DELETE TableName Axis .                    (rule 32)

	INNER          reduce using rule 32
	LEFT           reduce using rule 32
	RIGHT          reduce using rule 32
	FULL           reduce using rule 32
	OUTER          reduce using rule 32
	WHERE          reduce using rule 32
	WITHCONSTRAINT reduce using rule 32
	PLUS           reduce using rule 32
	'-'            reduce using rule 32
	')'            reduce using rule 32


State 70

	Axis -> COLUMN . int                                (rule 17)
	Axis -> COLUMN . alphaNumericString                 (rule 18)

	int            shift, and enter state 81
	alphaNumericStringshift, and enter state 82


State 71

	Axis -> ROW . int                                   (rule 19)

	int            shift, and enter state 80


State 72

	Query -> CLEAR TableName Position .                 (rule 33)

	INNER          reduce using rule 33
	LEFT           reduce using rule 33
	RIGHT          reduce using rule 33
	FULL           reduce using rule 33
	OUTER          reduce using rule 33
	WHERE          reduce using rule 33
	WITHCONSTRAINT reduce using rule 33
	PLUS           reduce using rule 33
	'-'            reduce using rule 33
	')'            reduce using rule 33


State 73

	Position -> int . ',' int                           (rule 16)

	','            shift, and enter state 79


State 74

	Query -> ADDBLANKTO TableName Axis .                (rule 34)

	INNER          reduce using rule 34
	LEFT           reduce using rule 34
	RIGHT          reduce using rule 34
	FULL           reduce using rule 34
	OUTER          reduce using rule 34
	WHERE          reduce using rule 34
	WITHCONSTRAINT reduce using rule 34
	PLUS           reduce using rule 34
	'-'            reduce using rule 34
	')'            reduce using rule 34


State 75

	ColumnLabels2 -> alphaNumericString ',' . ColumnLabels2    (rule 9)

	alphaNumericStringshift, and enter state 44

	ColumnLabels2  goto state 78

State 76

	ColumnLabels -> '[' ColumnLabels2 ']' .             (rule 8)

	BE             reduce using rule 8
	'}'            reduce using rule 8
	','            reduce using rule 8


State 77

	OutputType -> FILE Filename .                       (rule 15)

	%eof           reduce using rule 15


State 78

	ColumnLabels2 -> alphaNumericString ',' ColumnLabels2 .    (rule 9)

	']'            reduce using rule 9


State 79

	Position -> int ',' . int                           (rule 16)

	int            shift, and enter state 102


State 80

	Axis -> ROW int .                                   (rule 19)

	INNER          reduce using rule 19
	LEFT           reduce using rule 19
	RIGHT          reduce using rule 19
	FULL           reduce using rule 19
	OUTER          reduce using rule 19
	WHERE          reduce using rule 19
	WITHCONSTRAINT reduce using rule 19
	PLUS           reduce using rule 19
	'-'            reduce using rule 19
	')'            reduce using rule 19


State 81

	Axis -> COLUMN int .                                (rule 17)

	INNER          reduce using rule 17
	LEFT           reduce using rule 17
	RIGHT          reduce using rule 17
	FULL           reduce using rule 17
	OUTER          reduce using rule 17
	WHERE          reduce using rule 17
	WITHCONSTRAINT reduce using rule 17
	PLUS           reduce using rule 17
	'-'            reduce using rule 17
	')'            reduce using rule 17


State 82

	Axis -> COLUMN alphaNumericString .                 (rule 18)

	INNER          reduce using rule 18
	LEFT           reduce using rule 18
	RIGHT          reduce using rule 18
	FULL           reduce using rule 18
	OUTER          reduce using rule 18
	WHERE          reduce using rule 18
	WITHCONSTRAINT reduce using rule 18
	PLUS           reduce using rule 18
	'-'            reduce using rule 18
	')'            reduce using rule 18


State 83

	Query -> FILL var TableName Axis .                  (rule 31)

	INNER          reduce using rule 31
	LEFT           reduce using rule 31
	RIGHT          reduce using rule 31
	FULL           reduce using rule 31
	OUTER          reduce using rule 31
	WHERE          reduce using rule 31
	WITHCONSTRAINT reduce using rule 31
	PLUS           reduce using rule 31
	'-'            reduce using rule 31
	')'            reduce using rule 31


State 84

	Query -> INSERT var TableName Position .            (rule 30)

	INNER          reduce using rule 30
	LEFT           reduce using rule 30
	RIGHT          reduce using rule 30
	FULL           reduce using rule 30
	OUTER          reduce using rule 30
	WHERE          reduce using rule 30
	WITHCONSTRAINT reduce using rule 30
	PLUS           reduce using rule 30
	'-'            reduce using rule 30
	')'            reduce using rule 30


State 85

	Selection -> SELECT MaxClause Distinct ColumnChoice . FROM TableExpression WhereClause PlusClause    (rule 35)

	FROM           shift, and enter state 101


State 86

	ColumnChoice -> COLUMN . ColumnReference            (rule 43)
	ColumnChoice -> COLUMN . ColumnReference ',' ColumnChoice    (rule 44)

	alphaNumericStringshift, and enter state 18

	TableName      goto state 89
	ColumnReferencegoto state 100

State 87

	ColumnChoice -> COLUMNS . '*'                       (rule 42)

	'*'            shift, and enter state 99


State 88

	Query -> MERGE TableName TableName WITHCONSTRAINT . BooleanExpression    (rule 26)

	NOT            shift, and enter state 95
	INDEX          shift, and enter state 96
	'('            shift, and enter state 97
	alphaNumericStringshift, and enter state 18
	positiveNum    shift, and enter state 59
	negativeNum    shift, and enter state 60
	var            shift, and enter state 98

	TableName      goto state 89
	ColumnReferencegoto state 90
	BooleanExpressiongoto state 91
	SubExpression  goto state 92
	IndexExpressiongoto state 93
	Number         goto state 94

State 89

	ColumnReference -> TableName . '.' alphaNumericString    (rule 11)
	ColumnReference -> TableName . '.' int              (rule 12)

	'.'            shift, and enter state 121


State 90

	SubExpression -> ColumnReference .                  (rule 61)

	INNER          reduce using rule 61
	LEFT           reduce using rule 61
	RIGHT          reduce using rule 61
	FULL           reduce using rule 61
	OUTER          reduce using rule 61
	WHERE          reduce using rule 61
	WITHCONSTRAINT reduce using rule 61
	AND            reduce using rule 61
	OR             reduce using rule 61
	PLUS           reduce using rule 61
	'='            reduce using rule 61
	'-'            reduce using rule 61
	')'            reduce using rule 61


State 91

	Query -> MERGE TableName TableName WITHCONSTRAINT BooleanExpression .    (rule 26)
	BooleanExpression -> BooleanExpression . AND BooleanExpression    (rule 56)
	BooleanExpression -> BooleanExpression . OR BooleanExpression    (rule 57)
	SubExpression -> BooleanExpression .                (rule 60)

	INNER          reduce using rule 26
	LEFT           reduce using rule 26
	RIGHT          reduce using rule 26
	FULL           reduce using rule 26
	OUTER          reduce using rule 26
	WHERE          reduce using rule 26
	WITHCONSTRAINT reduce using rule 26
	AND            shift, and enter state 119
	OR             shift, and enter state 120
	PLUS           reduce using rule 26
	'='            reduce using rule 60
	'-'            reduce using rule 26
	')'            reduce using rule 26


State 92

	BooleanExpression -> SubExpression . '=' SubExpression    (rule 59)

	'='            shift, and enter state 118


State 93

	SubExpression -> IndexExpression .                  (rule 63)
	IndexExpression -> IndexExpression . '+' IndexExpression    (rule 67)
	IndexExpression -> IndexExpression . '-' IndexExpression    (rule 68)
	IndexExpression -> IndexExpression . '*' IndexExpression    (rule 69)
	IndexExpression -> IndexExpression . '/' IndexExpression    (rule 70)
	IndexExpression -> IndexExpression . "//" IndexExpression    (rule 71)
	IndexExpression -> IndexExpression . '%' IndexExpression    (rule 72)
	IndexExpression -> IndexExpression . '^' IndexExpression    (rule 73)

	INNER          reduce using rule 63
	LEFT           reduce using rule 63
	RIGHT          reduce using rule 63
	FULL           reduce using rule 63
	OUTER          reduce using rule 63
	WHERE          reduce using rule 63
	WITHCONSTRAINT reduce using rule 63
	AND            reduce using rule 63
	OR             reduce using rule 63
	PLUS           reduce using rule 63
	'='            reduce using rule 63
	'+'            shift, and enter state 111
	'*'            shift, and enter state 112
	'/'            shift, and enter state 113
	"//"           shift, and enter state 114
	'%'            shift, and enter state 115
	'^'            shift, and enter state 116
	'-'            reduce using rule 63
	')'            reduce using rule 63


State 94

	IndexExpression -> Number .                         (rule 65)

	INNER          reduce using rule 65
	LEFT           reduce using rule 65
	RIGHT          reduce using rule 65
	FULL           reduce using rule 65
	OUTER          reduce using rule 65
	WHERE          reduce using rule 65
	WITHCONSTRAINT reduce using rule 65
	AND            reduce using rule 65
	OR             reduce using rule 65
	PLUS           reduce using rule 65
	'='            reduce using rule 65
	'+'            reduce using rule 65
	'*'            reduce using rule 65
	'/'            reduce using rule 65
	"//"           reduce using rule 65
	'%'            reduce using rule 65
	'^'            reduce using rule 65
	'-'            reduce using rule 65
	')'            reduce using rule 65


State 95

	BooleanExpression -> NOT . BooleanExpression        (rule 58)

	NOT            shift, and enter state 95
	INDEX          shift, and enter state 96
	'('            shift, and enter state 97
	alphaNumericStringshift, and enter state 18
	positiveNum    shift, and enter state 59
	negativeNum    shift, and enter state 60
	var            shift, and enter state 98

	TableName      goto state 89
	ColumnReferencegoto state 90
	BooleanExpressiongoto state 110
	SubExpression  goto state 92
	IndexExpressiongoto state 93
	Number         goto state 94

State 96

	IndexExpression -> INDEX .                          (rule 64)

	INNER          reduce using rule 64
	LEFT           reduce using rule 64
	RIGHT          reduce using rule 64
	FULL           reduce using rule 64
	OUTER          reduce using rule 64
	WHERE          reduce using rule 64
	WITHCONSTRAINT reduce using rule 64
	AND            reduce using rule 64
	OR             reduce using rule 64
	PLUS           reduce using rule 64
	'='            reduce using rule 64
	'+'            reduce using rule 64
	'*'            reduce using rule 64
	'/'            reduce using rule 64
	"//"           reduce using rule 64
	'%'            reduce using rule 64
	'^'            reduce using rule 64
	'-'            reduce using rule 64
	')'            reduce using rule 64


State 97

	BooleanExpression -> '(' . BooleanExpression ')'    (rule 55)
	IndexExpression -> '(' . IndexExpression ')'        (rule 66)

	NOT            shift, and enter state 95
	INDEX          shift, and enter state 96
	'('            shift, and enter state 97
	alphaNumericStringshift, and enter state 18
	positiveNum    shift, and enter state 59
	negativeNum    shift, and enter state 60
	var            shift, and enter state 98

	TableName      goto state 89
	ColumnReferencegoto state 90
	BooleanExpressiongoto state 108
	SubExpression  goto state 92
	IndexExpressiongoto state 109
	Number         goto state 94

State 98
